testsuite/tests/ghc-regress/indexed-types/should_compile/GADT13.hs
{-# LANGUAGE TypeFamilies, GADTs #-}

data family HiThere a :: *

data instance HiThere () where
    HiThere :: HiThere ()
